--- a/HTML/style.css
+++ b/HTML/style.css
@@ -3,6 +3,7 @@ body {
 
 }
 
+/* Default styles */
 .container {
     width: 40%;
     margin: auto;
@@ -29,3 +30,27 @@ h3 a {
 
 }
 
+/* Styles only for page: create-quizz */
+.container.create-quizz{
+
+}
+
+.container.create-quizz h2 {
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    color: red
+}
+
+.container.create-quizz form label {
+    display: block;
+    margin: 20px 0 0 0;
+}
+.container.create-quizz form p {
+    display: block;
+    margin: 3px 0 10px 0;
+}
+
+/* Styles only for page: play-quizz */
+.container.play-quizz{
+
+}
